# CodeForge-Studio

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start-dev.bat  start-dev.sh
app/: main.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: __init__.py  problems.py
app/core/: config.py
app/models/: __init__.py  problem.py
app/schemas/: __init__.py  problem.py
app/services/: __init__.py  ai_service.py  prompt_service.py
backend/: .env.example  .gitignore  Dockerfile  docker-compose.yml  nginx.conf  requirements.txt  setup.sh
backend/app/: __init__.py  analyzer.py  api_routes.py  config.py  main.py  models.py  prompts.py  websocket_routes.py
frontend/: package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  index.css
static/: README.md
